# Typing_Speed_Game

./: .gitignore  README.md  controller.py  director.py  display.py  main.py  pyArcadeTest.py  pyproject.toml  requirements.txt  requirements_dev.txt  sams.py  setup.cfg  setup.py  tox.ini
.github/workflows/: tests.yml
game/: constants.py  controller.py  display.py  enemy.py  instructionsmenu.py  levelGenerator.py  mainmenu.py  mainmenucontroller.py  random_word.py  scoremenu.py  stattracker.py  training.py  trainingcontroller.py  traininginstructions.py  trainingmenu.py
game/resources/save/: save.txt
game/resources/word_files/: diff_2.csv  diff_6.csv  diff_7.csv
game/unused/: parse_difficulty.py  text_cleaner.py
src/: main.py
src/game/: constants.py  controller.py  display.py  enemy.py  instructionsmenu.py  levelGenerator.py  level_1.py  mainmenu.py  random_word.py  scoremenu.py  sound.py  training.py  traininginstructions.py  trainingmenu.py  tumbleweed.py
src/game/resources/word_files/: diff_4.csv  diff_5.csv  diff_8.csv
src/game/unused/: parse_difficulty.py
src/speed_typing/: main.py
src/speed_typing/game/: constants.py  controller.py  display.py  mainmenu.py  random_word.py  training.py
src/speed_typing/game/resources/word_files/: diff_1.csv  diff_3.csv
tests/: test_random_word.py
