[metadata]
name = Typing Speed Game
description = Teaches Typing basics and then helps you practice.
author = Austin Jesperson, Ethan Tolson, Kelly Payne, Samantha Staheli, Sebastian Bustamante, Andrew LaPointe
license = None
license_files = None
platforms = win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    src
install_requires =
    arcade>=2.6.7
python_requires = >=3.6

zip_safe = no

[options.extras_require]
testing =
    # pytest>=6.0
    # pytest-cov>=2.0
    # mypy>=0.910
    flake8>=3.9
    # tox>=3.24

[flake8]
max-line-length = 160